objects/analyticscc__Json_class__c.object
<CustomObject>
    <fields>
        <fullName>analyticscc__Chart_Delete_Row__c</fullName>
        <label>Chart Delete Row</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Chart_Delete_Success1__c</fullName>
        <label>Chart Delete Success1</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Chart_Delete_Success__c</fullName>
        <label>Chart Delete Success</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Chart_Delete__c</fullName>
        <label>Chart Delete</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Chart_Delete_marketing1__c</fullName>
        <label>Chart Delete marketing1</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Chart_Delete_marketing__c</fullName>
        <label>Chart Delete marketing</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Dashboard_Id__c</fullName>
        <label>Dashboard Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Dashboard_Type__c</fullName>
        <label>Dashboard Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticscc__Filter5_deleted__c</fullName>
        <label>Filter5 deleted</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json1__c</fullName>
        <label>Json1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json2__c</fullName>
        <label>Json2</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json3__c</fullName>
        <label>Json3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Del__c</fullName>
        <label>Json Del</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_FilterLabel_Delete__c</fullName>
        <label>Json FilterLabel Delete</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Filter_Remove__c</fullName>
        <label>Json Filter Remove</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Filter__c</fullName>
        <label>Json Filter</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Full_pillbox__c</fullName>
        <label>Json Full pillbox</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_KPI_1__c</fullName>
        <label>Json KPI 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_KPI_2__c</fullName>
        <label>Json KPI 2</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_KPI__c</fullName>
        <label>Json KPI</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Last_Dataset__c</fullName>
        <label>Json Last Dataset</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_ListSelector1__c</fullName>
        <label>Json ListSelector1</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_ListSelector_Date2__c</fullName>
        <label>Json ListSelector Date2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_ListSelector__c</fullName>
        <label>Json ListSelector</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_List_Selector2__c</fullName>
        <label>Json List Selector2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_MeasureLabel_Delete__c</fullName>
        <label>Json MeasureLabel Delete</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Measure_List__c</fullName>
        <label>Json Measure List</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Measure__c</fullName>
        <label>Json Measure</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Number1__c</fullName>
        <label>Json Number1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Number__c</fullName>
        <label>Json Number</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Pillbox1__c</fullName>
        <label>Json Pillbox1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Pillbox2__c</fullName>
        <label>Json Pillbox2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Pillbox5__c</fullName>
        <label>Json Pillbox5</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Pillbox_comma__c</fullName>
        <label>Json Pillbox comma</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Section1__c</fullName>
        <label>Json Section1</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Selector38__c</fullName>
        <label>Json Selector38</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Selector3__c</fullName>
        <label>Json Selector3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Selector_Date__c</fullName>
        <label>Json Selector Date</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_Static_Measure__c</fullName>
        <label>Json Static Measure</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_String_Toggle__c</fullName>
        <label>Json String Toggle</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_String__c</fullName>
        <label>Json String</label>
        <length>5940</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_list_Measure__c</fullName>
        <label>Json list Measure</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_section2__c</fullName>
        <label>Json Date</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Json_section3__c</fullName>
        <label>Json Filters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__List_Selector35__c</fullName>
        <label>List Selector35</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Market_Filter1__c</fullName>
        <label>Market Filter1</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Market_Filter2__c</fullName>
        <label>Market Filter2</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Market_Filter3__c</fullName>
        <label>Market Filter3</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Market__c</fullName>
        <label>Market</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Marketing_Timeline__c</fullName>
        <label>Marketing Timeline</label>
        <length>8100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Sales_Filter1__c</fullName>
        <label>Sales Filter1</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Sales_Filter2__c</fullName>
        <label>Sales Filter2</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Sales_Filter3__c</fullName>
        <label>Sales Filter3</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Sales_Timeline__c</fullName>
        <label>Sales Timeline</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Success_Filter1__c</fullName>
        <label>Success Filter1</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Success_Filter2__c</fullName>
        <label>Success Filter2</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Success_Filter3__c</fullName>
        <label>Success Filter3</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Success_KPI_1__c</fullName>
        <label>Success KPI 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Success_KPI_2__c</fullName>
        <label>Success KPI 2</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Success_KPI_3__c</fullName>
        <label>Success KPI 3</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>analyticscc__Success_Timeline__c</fullName>
        <label>Success Timeline</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Json class</label>
    <nameField>
        <label>Json class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Json class</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>